--- a/cmd/web-app/templates/partials/site-footer.tmpl
+++ b/cmd/web-app/templates/partials/site-footer.tmpl
@@ -1,11 +1,14 @@
 {{ define "partials/site-footer" }}
-<footer class="bg-white mt-5 pt-5">
+<footer class="bg-dark text-white mt-5 pt-5">
     <div class="container mt-5 pt-5">
         <div class="row">
             <div class="col-sm-9 col-lg-6 mb-7">
                 <a class="d-inline-flex align-items-center mb-3" href="/" aria-label="Starter Kit for Software-as-a-Service">
                     <img src="{{ SiteAssetUrl "/images/saas-stater-kit-icon-200x200.png" }}" height="50" alt="Starter Kit for Software-as-a-Service"></a>
-                <p class="small text-white-70">Our software-as-a-service digitizes your businesses processes to increase performance and efficiency.</p>
+                <p class="small text-white-70">
+                Remoteschool.com.ng is a cloud-based learning platform that offers safe
+                 and affordable interactive online and private tutoring
+                </p>
             </div>
             <div class="col-6 col-sm-6 col-lg-3 ml-lg-auto mb-4">
                 <h3 class="h6">SaaS</h3>
@@ -34,7 +37,7 @@
             </div>
 
             <div class="col-sm-6 text-sm-right">
-                <p class="small text-white-70 mb-0">&copy; Copyright 2019 Geeks Accelerator.</p>
+                <p class="small text-white-70 mb-0">&copy; Copyright 2020 Remoteschool.com.ng.</p>
             </div>
         </div>
         <div class="row align-items-center">
