--- a/cmd/web-app/templates/content/site-index.gohtml
+++ b/cmd/web-app/templates/content/site-index.gohtml
@@ -1,75 +1,132 @@
-{{define "title"}}SaaS to Automate your Business Processes{{end}}
-{{define "description"}}The best features for streamlining your businesses processes to increase performance and efficiency.{{end}}
+{{define "title"}}Online interactive tutoring platform{{end}}
+{{define "description"}}Cloud-based learning platform that offers safe and
+affordable interactive online private tutoring.{{end}}
 {{define "style"}}
-
+<style>
+.call-out {
+    border-radius: 15px;
+    padding: 20px;
+}
+.call-out::after {
+    border-radius: 15px;
+    content: "";
+    background: #786ABF;
+    opacity: 0.8;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;   
+}
+.call-out p {
+    font-size: 1.2em;
+}
+</style>
 {{end}}
 {{ define "content" }}
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-            </ol>
+            
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="first-slide" src="https://dzuyel7n94hma.cloudfront.net/accelerator/img/saas-starter-kit-banner-01.png" style="width:100%;min-height: 500px" alt="First slide">
                     <div class="container">
-                        <div class="carousel-caption text-center">
-                            <h1>Automate your Business Processes</h1>
-                            <p>Enhances team productivity and profitability by streamlining your business processes with our innovative software-as-a-service solution. Save valuable time and money by turning your organization’s businesses processes that enable real-time collaboration anywhere, on any device. </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="second-slide" src="https://dzuyel7n94hma.cloudfront.net/accelerator/img/saas-starter-kit-banner-02.png" style="width:100%;min-height: 500px" alt="Second slide">
-                    <div class="container">
-                        <div class="carousel-caption text-left">
-                            <h1>Increase your Business Performance now!</h1>
-                            <p>Solution to increase the performance and efficiency of your businesses processes that scales with you, your team and your company. No credit card needed. Start your Free 30 Day free trial. </p>
-                            <p><a class="btn btn-lg btn-primary" href="/signup" role="button">Sign up today</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="third-slide" src="https://dzuyel7n94hma.cloudfront.net/accelerator/img/saas-starter-kit-banner-03.png" style="width:100%;min-height: 500px" alt="Third slide">
-                    <div class="container">
-                        <div class="carousel-caption text-left">
-                            <h1>Simple and Power API </h1>
-                            <p>Integrate our SaaS with your internal systems using our simple and powerful API. Our API allows you to integrate complex services with our SaaS to go beyond the integrations we provide out of the box.</p>
-                            <p><a class="btn btn-lg btn-primary" href="/api" role="button">Learn about API</a></p>
+                        <div class="carousel-caption text-center call-out">
+                            <h1>Experience the Power of Technology in Education</h1>
+                            <p>Imagine the serenity, convenience and the satisfaction your child will derive
+                                from learning at his/her pace in the comfort of your house. 
+                                The world has
+                                become a global village and your child may not need to be confined within the
+                                four walls of a school building anymore in order to learn. Remoteschool.com.ng has
+                                got the answer.</p>
+                                <h2>100% Remote online tutoring website</h2>
+                                <p>
+                                    We bring this technology to your doorstep. Your child does not need the presence of a home  teacher to learn.<br/>
+                                    Out platform provides a 100% remote learning environment that gives the same 
+                                    interactive experience available in a physical class.
+                                </p>
+                            <div>
+                                <h2>Better Grades Guaranteed.</h2>
+                                <p>Our online tutors are ready to help you round the clock.</p>
+                                <form method="post" action="signup">
+                                    <div class="form-row">
+                                        <div class="col">
+                                        <input type="text" class="form-control" placeholder="Name">
+                                        </div>
+                                        <div class="col">
+                                        <input type="text" class="form-control" placeholder="Email">
+                                        </div>
+                                        <div class="col">
+                                        <input type="text" class="form-control" placeholder="Phone Number">
+                                        </div>
+                                    </div>
+                                    <input type="submit" class="btb btn-success btn-lg mt-3" value="Start Learning">
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
         </div>
 
         <div class="container" id="page-content" >
-
+       
         <div class="row mt-5">
-            <div class="col-lg-4">
-                <img class="" src="https://dzuyel7n94hma.cloudfront.net/accelerator/img/saas-feature-cloud.png" alt="Automation with SaaS" width="140" height="140">
-                <h2>Cloud Automation</h2>
-                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+    
+            <div class="col-lg-4 text-center">
+                <img class="" src="{{ SiteAssetUrl "/images/Icon_The_Best_Tutors.png" }}" alt="Image of teachers" width="140" height="140">
+                <h2 class="text-center">The Best Tutors</h2>
+                <p class="text-center">
+                Our teacher goes through a very regorious approval process. We hand pick industry experts with not less
+                than 5 year teaching experience that are good in technology.
+                </p>
             </div>
-            <div class="col-lg-4">
-                <img class="" src="https://dzuyel7n94hma.cloudfront.net/accelerator/img/saas-feature-bigdata.png" alt="Big Data for Automation and AI" width="140" height="140">
-                <h2>Big Data</h2>
-                <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+            <div class="col-lg-4 text-center">
+                <img class="text-center" src="{{ SiteAssetUrl "/images/Icon_Personalized.png" }}" alt="Personalized experience" width="140" height="140">
+                <h2 class="text-center">Personalized</h2>
+                <p class="text-center">Every session gives one-to-one and personalized experience to the learner. There is no overcrawding of classes. 
+                We maintain a maximum of five(5) students</p>
             </div>
-            <div class="col-lg-4">
-                <img class="" src="https://dzuyel7n94hma.cloudfront.net/accelerator/img/saas-feature-ai.png" alt="Increase Performance with AI" width="140" height="140">
-                <h2>Superior AI</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <div class="col-lg-4 text-center">
+                <img class="text-center" src="{{ SiteAssetUrl "/images/Icon_Variety_of_Subjects.png" }}" alt="Variety of subjects" width="140" height="140">
+                <h2 class="text-center">Variety of Subjects</h2>
+                <p class="text-center">We cover subjects for Primary, Junior and Senior Secondary school.
+                 From Maths and Further Maths to English, Chemistry and Physics. Test prep and AP. too</p>
             </div>
         </div>
+
+        <div class="row mt-5">
+			<div class="col-sm-12">
+				<h3 class="text-center">What do you want to learn? We've got you covered</h3>					
+				<hr>
+				<div class="row gotyou-covered">
+					<div class="col-sm-4">
+						<ul>
+							<li class="category-link"><a href="/subjects/math">Math</a></li>
+							<li><a href="/subjects/algebra">Algebra Tutors</a></li>
+							<li><a href="/subjects/calculus">Calculus Tutors</a></li>
+							<li><a href="/subjects/trigonometry">Trigonometry Tutors</a></li>
+						</ul>
+					</div>
+					<div class="col-sm-4">
+						<ul>
+							<li class="category-link"><a href="/subjects/science">Science</a></li>
+							<li><a href="/subjects/chemistry">Chemistry Tutors</a></li>
+							<li><a href="/subjects/physics">Physics Tutors</a></li>
+							<li><a href="/subjects/anatomy-physiology">Anatomy &amp; Physiology</a></li>
+						</ul>
+					</div>
+					<div class="col-sm-4">
+						<ul>
+							<li class="category-link"><a href="/subjects/english">English</a></li>
+							<li><a href="/subjects/essay-writing">Essay Writing Tutors</a></li>
+							<li><a href="/subjects/literature">Literature Tutors</a></li>
+							<li><a href="/subjects/proofreading">Proofreading Tutors</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
 
     </div>
 {{end}}
