--- a/cmd/web-app/templates/layouts/site.gohtml
+++ b/cmd/web-app/templates/layouts/site.gohtml
@@ -3,14 +3,14 @@
     <html lang="en">
     <head>
         <title>
-            {{block "title" .}}{{end}} Web App
+            Remote School - {{block "title" .}}{{end}}
         </title>
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="{{block "description" .}}{{end}} ">
-        <meta name="author" content="Geeks Accelerator">
+        <meta name="author" content="Merry World - Ademu Anthony">
 
         <link rel="icon" type="image/png" sizes="16x16" href="{{ SiteAssetUrl "/images/saas-stater-kit-icon-200x200.png" }}">
 
