--- a/cmd/web-app/templates/partials/site-topbar.tmpl
+++ b/cmd/web-app/templates/partials/site-topbar.tmpl
@@ -1,8 +1,10 @@
 {{ define "partials/site-topbar" }}
     <!-- Topbar -->
-    <nav class="navbar navbar-dark bg-primary topbar navbar-fixed-top shadow" style="position: fixed; right: 0; left: 0; z-index: 1030;">
+    <nav class="navbar navbar-dark bg-primary topbar navbar-fixed-top shadow" 
+        style="position: fixed; right: 0; left: 0; z-index: 1030;">
         <a class="my-0 mr-md-auto  navbar-brand" href="/">
-            <img src="{{ SiteAssetUrl "/images/saas-stater-kit-logo-350x100.png"}}"  height="30" alt="SaaS Starter Kit">
+            RemoteSchool.com.ng
+            <!-- <img src="{{ SiteAssetUrl "/images/saas-stater-kit-logo-350x100.png"}}"  height="30" alt="SaaS Starter Kit"> -->
         </a>
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-white" href="/">Home</a>
