--- a/cmd/web-app/templates/content/site-index.gohtml
+++ b/cmd/web-app/templates/content/site-index.gohtml
@@ -60,7 +60,7 @@ affordable interactive online private tutoring.{{end}}
                                         <input type="text" class="form-control" placeholder="Phone Number">
                                         </div>
                                     </div>
-                                    <input type="submit" class="btb btn-success btn-lg mt-3" value="Start Learning">
+                                    <input type="submit" class="btb btn-danger btn-lg mt-3" value="Start Learning">
                                 </form>
                             </div>
                         </div>
@@ -102,26 +102,26 @@ affordable interactive online private tutoring.{{end}}
 				<div class="row gotyou-covered">
 					<div class="col-sm-4">
 						<ul>
-							<li class="category-link"><a href="/subjects/math">Math</a></li>
-							<li><a href="/subjects/algebra">Algebra Tutors</a></li>
-							<li><a href="/subjects/calculus">Calculus Tutors</a></li>
-							<li><a href="/subjects/trigonometry">Trigonometry Tutors</a></li>
+							<li class="category-link"><a href="/signup/math"><b>Math</b></a></li>
+							<li><a href="/signup/algebra">Algebra Tutors</a></li>
+							<li><a href="/signup/calculus">Calculus Tutors</a></li>
+							<li><a href="/signup/trigonometry">Trigonometry Tutors</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-4">
 						<ul>
-							<li class="category-link"><a href="/subjects/science">Science</a></li>
-							<li><a href="/subjects/chemistry">Chemistry Tutors</a></li>
-							<li><a href="/subjects/physics">Physics Tutors</a></li>
-							<li><a href="/subjects/anatomy-physiology">Anatomy &amp; Physiology</a></li>
+							<li class="category-link"><a href="/signup/science"><b>Science</b></a></li>
+							<li><a href="/signup/chemistry">Chemistry Tutors</a></li>
+							<li><a href="/signup/physics">Physics Tutors</a></li>
+							<li><a href="/signup/biology">Biology</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-4">
 						<ul>
-							<li class="category-link"><a href="/subjects/english">English</a></li>
-							<li><a href="/subjects/essay-writing">Essay Writing Tutors</a></li>
-							<li><a href="/subjects/literature">Literature Tutors</a></li>
-							<li><a href="/subjects/proofreading">Proofreading Tutors</a></li>
+							<li class="category-link"><a href="/subjects/english"><b>English</b></a></li>
+							<li><a href="/signup/essay-writing">Essay Writing Tutors</a></li>
+							<li><a href="/signup/literature">Literature Tutors</a></li>
+							<li><a href="/signup/proofreading">Proofreading Tutors</a></li>
 						</ul>
 					</div>
 				</div>
