--- a/cmd/web-app/templates/partials/site-footer.tmpl
+++ b/cmd/web-app/templates/partials/site-footer.tmpl
@@ -1,50 +1,53 @@
 {{ define "partials/site-footer" }}
-<footer class="bg-dark text-white mt-5 pt-5">
-    <div class="container mt-5 pt-5">
-        <div class="row">
-            <div class="col-sm-9 col-lg-6 mb-7">
-                <a class="d-inline-flex align-items-center mb-3" href="/" aria-label="Starter Kit for Software-as-a-Service">
-                    <img src="{{ SiteAssetUrl "/images/saas-stater-kit-icon-200x200.png" }}" height="50" alt="Starter Kit for Software-as-a-Service"></a>
-                <p class="small text-white-70">
-                Remoteschool.com.ng is a cloud-based learning platform that offers safe
-                 and affordable interactive online and private tutoring
-                </p>
-            </div>
-            <div class="col-6 col-sm-6 col-lg-3 ml-lg-auto mb-4">
-                <h3 class="h6">SaaS</h3>
-                <ul class="list-unstyled">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/pricing">Pricing</a></li>
-                    <li><a href="/support">Support</a></li>
-                    <li><a href="/api">API</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-sm-6 col-lg-3 mb-4">
-                <h3 class="h6">Legal</h3>
-                <ul class="list-unstyled">
-                    <li><a href="/legal/privacy">Privacy Policy</a></li>
-                    <li><a href="/legal/terms">Terms of Service</a></li>
-                </ul>
-            </div>
+  <!-- Site footer -->
+  <footer class="site-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-6">
+          <h6>About</h6>
+          <p class="text-justify">Remoteschool.com.ng
+               is a cloud-based learning platform that offers safe and affordable 
+               interactive online and home (private tutoring)</p>
         </div>
-        <div class="row">
-            <div class="col-sm-6 mb-5">
-                <ul class="list-inline mb-0">
-                    <li class="list-inline-item"><a class="btn btn-sm btn-icon btn-secondary" href="https://www.linkedin.com/company/geeks-accelerator"><span class="fab fa-linkedin-in"></span></a></li>
 
-                    <li class="list-inline-item"><a class="btn btn-sm btn-icon btn-secondary" href="https://gitlab.com/geeks-accelerator"><span class="fab fa-gitlab"></span></a></li>
-                </ul>
-            </div>
+        <div class="col-xs-6 col-md-3">
+          <h6>Top Subject</h6>
+          <ul class="footer-links">
+            <li><a href="/signup/maths">Maths</a></li>
+            <li><a href="/signup/english">English</a></li>
+            <li><a href="/signup/biology">Biology</a></li>
+          </ul>
+        </div>
 
-            <div class="col-sm-6 text-sm-right">
-                <p class="small text-white-70 mb-0">&copy; Copyright 2020 Remoteschool.com.ng.</p>
-            </div>
+        <div class="col-xs-6 col-md-3">
+          <h6>Quick Links</h6>
+          <ul class="footer-links">
+            <li><a class="p-2 text-white" href="/">Home</a></li>
+            <li><a class="p-2 text-white" href="/pricing">Pricing</a></li>
+            <li><a class="p-2 text-white" href="/support">Support</a></li>
+          </ul>
         </div>
-        <div class="row align-items-center">
-            <div class="col-sm-6 mb-5">
-                {{ template "partials/buildinfo" . }}
-            </div>
+      </div>
+      <hr>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-sm-6 col-xs-12">
+          <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by 
+       <a href="#">Merry World</a>.
+          </p>
         </div>
+
+        <div class="col-md-4 col-sm-6 col-xs-12">
+          <ul class="social-icons">
+            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+            <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a class="dribbble" href="#"><i class="fa fa-instagram"></i></a></li>
+            <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
+          </ul>
+        </div>
+      </div>
     </div>
 </footer>
+
 {{end}}
