--- a/cmd/web-app/templates/partials/site-topbar.tmpl
+++ b/cmd/web-app/templates/partials/site-topbar.tmpl
@@ -1,6 +1,6 @@
 {{ define "partials/site-topbar" }}
     <!-- Topbar -->
-    <nav class="navbar navbar-dark bg-primary topbar navbar-fixed-top shadow" 
+    <nav class="navbar navbar-dark bg-primary topbar navbar-fixed-top navbar-expand-md shadow" 
         style="position: fixed; right: 0; left: 0; z-index: 1030;">
         <a class="my-0 mr-md-auto  navbar-brand" href="/">
             RemoteSchool.com.ng
