--- a/cmd/web-app/templates/content/site-index.gohtml
+++ b/cmd/web-app/templates/content/site-index.gohtml
@@ -50,13 +50,13 @@ affordable interactive online private tutoring.{{end}}
                                 <p>Our online tutors are ready to help you round the clock.</p>
                                 <form method="post" action="signup">
                                     <div class="form-row">
-                                        <div class="col-md-4 col-sm-12">
+                                        <div class="col-md-4 col-sm-12 mt-3">
                                         <input type="text" class="form-control" placeholder="Name">
                                         </div>
-                                        <div class="col-md-4 col-sm-12">
+                                        <div class="col-md-4 col-sm-12 mt-3">
                                         <input type="text" class="form-control" placeholder="Email">
                                         </div>
-                                        <div class="col-md-4 col-sm-12">
+                                        <div class="col-md-4 col-sm-12 mt-3">
                                         <input type="text" class="form-control" placeholder="Phone Number">
                                         </div>
                                     </div>
