--- a/cmd/web-app/templates/partials/site-topbar.tmpl
+++ b/cmd/web-app/templates/partials/site-topbar.tmpl
@@ -1,18 +1,28 @@
 {{ define "partials/site-topbar" }}
     <!-- Topbar -->
-    <nav class="navbar navbar-dark bg-primary topbar navbar-fixed-top navbar-expand-md shadow" 
-        style="position: fixed; right: 0; left: 0; z-index: 1030;">
-        <a class="my-0 mr-md-auto  navbar-brand" href="/">
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <a class="my-0 mr-md-auto  navbar-brand" href="/">
             RemoteSchool.com.ng
             <!-- <img src="{{ SiteAssetUrl "/images/saas-stater-kit-logo-350x100.png"}}"  height="30" alt="SaaS Starter Kit"> -->
         </a>
-        <nav class="my-2 my-md-0 mr-md-3">
-            <a class="p-2 text-white" href="/">Home</a>
-            <a class="p-2 text-white" href="/pricing">Pricing</a>
-            <a class="p-2 text-white" href="/support">Support</a>
-            <a class="p-2 text-white" href="/user/login"><i class="far fa-user"></i> Login</a>
-        </nav>
-        <a class="btn btn-purple" href="/signup">Sign up</a>
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav">
+            <nav class="my-2 my-md-0 mr-md-3 navbar-nav">
+                <a class="p-2 text-white" href="/">Home</a>
+                <a class="p-2 text-white" href="/pricing">Pricing</a>
+                <a class="p-2 text-white" href="/support">Support</a>
+                <a class="p-2 text-white" href="/user/login"><i class="far fa-user"></i> Login</a>
+            </nav>
+        
+            </div>
+            <div class="navbar-nav ml-auto">
+                <a class="btn btn-purple" href="/signup">Sign up</a>
+            </div>
+        </div>
     </nav>
     <!-- End of Topbar -->
 {{ end }}
