--- a/cmd/web-app/templates/partials/site-topbar.tmpl
+++ b/cmd/web-app/templates/partials/site-topbar.tmpl
@@ -1,6 +1,6 @@
 {{ define "partials/site-topbar" }}
     <!-- Topbar -->
-    <nav class="navbar navbar-dark bg-primary topbar navbar-fixed-top navbar-expand-md shadow" 
+    <nav class="navbar navbar-dark bg-primary topbar navbar-fixed-top shadow" 
         style="position: fixed; right: 0; left: 0; z-index: 1030;">
         <a class="my-0 mr-md-auto  navbar-brand" href="/">
             RemoteSchool.com.ng
@@ -9,13 +9,13 @@
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <nav class="my-2 my-md-0 mr-md-3 navbar-nav">
+        <nav class="my-2 my-md-0 mr-md-3 navbar-nav navbar-collapse-sm" id="navbarCollapse">
             <a class="p-2 text-white" href="/">Home</a>
             <a class="p-2 text-white" href="/pricing">Pricing</a>
             <a class="p-2 text-white" href="/support">Support</a>
             <a class="p-2 text-white" href="/user/login"><i class="far fa-user"></i> Login</a>
+            <a class="btn btn-purple" href="/signup">Sign up</a>
         </nav>
-        <a class="btn btn-purple" href="/signup">Sign up</a>
     </nav>
     <!-- End of Topbar -->
 {{ end }}
