--- a/cmd/web-app/templates/partials/site-topbar.tmpl
+++ b/cmd/web-app/templates/partials/site-topbar.tmpl
@@ -1,21 +1,33 @@
 {{ define "partials/site-topbar" }}
     <!-- Topbar -->
-    <nav class="navbar navbar-dark bg-primary topbar navbar-fixed-top shadow" 
+    <nav class="navbar navbar-dark bg-primary topbar navbar-fixed-top shadow d-none-sm" 
         style="position: fixed; right: 0; left: 0; z-index: 1030;">
         <a class="my-0 mr-md-auto  navbar-brand" href="/">
             RemoteSchool.com.ng
             <!-- <img src="{{ SiteAssetUrl "/images/saas-stater-kit-logo-350x100.png"}}"  height="30" alt="SaaS Starter Kit"> -->
         </a>
-        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <nav class="my-2 my-md-0 mr-md-3 navbar-nav navbar-collapse-sm" id="navbarCollapse">
+        <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-white" href="/">Home</a>
             <a class="p-2 text-white" href="/pricing">Pricing</a>
             <a class="p-2 text-white" href="/support">Support</a>
             <a class="p-2 text-white" href="/user/login"><i class="far fa-user"></i> Login</a>
-            <a class="btn btn-purple" href="/signup">Sign up</a>
         </nav>
+        <a class="btn btn-purple" href="/signup">Sign up</a>
     </nav>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark d-none-md">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <a class="navbar-brand" href="#">RemoteSchool.com.ng</a>
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item"><a class="p-2 text-white nav-link" href="/pricing">Pricing</a></li>
+                <li class="nav-item"><a class="p-2 text-white nav-link" href="/support">Support</a></li>
+                <li class="nav-item"><a class="p-2 text-white nav-link" href="/user/login">Login</a></li>
+                <li class="nav-item"><a class="p-2 text-white nav-link" href="/signup">Sign Up</a></li>
+            </ul>
+        </div>
+        </nav>
     <!-- End of Topbar -->
 {{ end }}
