--- a/cmd/web-app/templates/partials/site-topbar.tmpl
+++ b/cmd/web-app/templates/partials/site-topbar.tmpl
@@ -1,18 +1,60 @@
 {{ define "partials/site-topbar" }}
     <!-- Topbar -->
-    <nav class="navbar navbar-dark bg-primary topbar navbar-fixed-top shadow" 
-        style="position: fixed; right: 0; left: 0; z-index: 1030;">
-        <a class="my-0 mr-md-auto  navbar-brand" href="/">
-            RemoteSchool.com.ng
-            <!-- <img src="{{ SiteAssetUrl "/images/saas-stater-kit-logo-350x100.png"}}"  height="30" alt="SaaS Starter Kit"> -->
-        </a>
-        <nav class="my-2 my-md-0 mr-md-3">
-            <a class="p-2 text-white" href="/">Home</a>
-            <a class="p-2 text-white" href="/pricing">Pricing</a>
-            <a class="p-2 text-white" href="/support">Support</a>
-            <a class="p-2 text-white" href="/user/login"><i class="far fa-user"></i> Login</a>
-        </nav>
-        <a class="btn btn-purple" href="/signup">Sign up</a>
-    </nav>
+
     <!-- End of Topbar -->
+
+    <div class="fixed-top">
+        <header class="topbar">
+            <div class="container">
+                <div class="row">
+                <!-- social icon-->
+                <div class="col-sm-12">
+                    <ul class="social-network">
+                    <li><a class="waves-effect waves-dark" href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a class="waves-effect waves-dark" href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a class="waves-effect waves-dark" href="#"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a class="waves-effect waves-dark" href="#"><i class="fa fa-instagram"></i></a></li>
+                    </ul>
+                </div>
+
+                </div>
+            </div>
+        </header>
+        <nav class="navbar navbar-expand-lg navbar-dark mx-background-top-linear">
+            <div class="container">
+            <a class="navbar-brand" href="index.html" style="text-transform: uppercase;"> REMOTE SCHOOL</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+
+                <ul class="navbar-nav ml-auto">
+
+                <li class="nav-item active">
+                    <a class="nav-link" href="/">Home
+                    <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/pricing">Pricing</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/support">Support</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/user/login">Login</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/signup">Register</a>
+                </li>
+
+                </ul>
+            </div>
+            </div>
+        </nav>
+    </div>
 {{ end }}
