--- a/cmd/web-app/templates/content/site-index.gohtml
+++ b/cmd/web-app/templates/content/site-index.gohtml
@@ -31,7 +31,7 @@ affordable interactive online private tutoring.{{end}}
                 <div class="carousel-item active">
                     <img class="first-slide" src="https://dzuyel7n94hma.cloudfront.net/accelerator/img/saas-starter-kit-banner-01.png" style="width:100%;min-height: 500px" alt="First slide">
                     <div class="container">
-                        <div class="carousel-caption text-center call-out">
+                        <div class="carousel-caption text-center call-out mt-sm-5">
                             <h1>Experience the Power of Technology in Education</h1>
                             <p>Imagine the serenity, convenience and the satisfaction your child will derive
                                 from learning at his/her pace in the comfort of your house. 
