--- a/cmd/web-app/templates/content/site-index.gohtml
+++ b/cmd/web-app/templates/content/site-index.gohtml
@@ -39,15 +39,15 @@ affordable interactive online private tutoring.{{end}}
                                 become a global village and your child may not need to be confined within the
                                 four walls of a school building anymore in order to learn. Remoteschool.com.ng has
                                 got the answer.</p>
-                                <h2>100% Remote online tutoring website</h2>
-                                <p>
+                                <h2 class="d-node-sm">100% Remote online tutoring website</h2>
+                                <p class="d-node-sm">
                                     We bring this technology to your doorstep. Your child does not need the presence of a home  teacher to learn.<br/>
                                     Out platform provides a 100% remote learning environment that gives the same 
                                     interactive experience available in a physical class.
                                 </p>
                             <div>
-                                <h2>Better Grades Guaranteed.</h2>
-                                <p>Our online tutors are ready to help you round the clock.</p>
+                                <h2 class="d-node-sm">Better Grades Guaranteed.</h2>
+                                <p class="d-node-sm">Our online tutors are ready to help you round the clock.</p>
                                 <form method="post" action="signup">
                                     <div class="form-row">
                                         <div class="col-md-4 col-sm-12 mt-3">
