--- a/cmd/web-app/templates/content/site-index.gohtml
+++ b/cmd/web-app/templates/content/site-index.gohtml
@@ -32,7 +32,7 @@ affordable interactive online private tutoring.{{end}}
                     <img class="first-slide" src="https://dzuyel7n94hma.cloudfront.net/accelerator/img/saas-starter-kit-banner-01.png" style="width:100%;min-height: 500px" alt="First slide">
                     <div class="container">
                         <div class="carousel-caption text-center call-out mt-sm-5">
-                            <div class="d-sm-none">
+                            <div class="d-sm-none d-md-block">
                                 <h1>Experience the Power of Technology in Education</h1>
                                 <p>Imagine the serenity, convenience and the satisfaction your child will derive
                                 from learning at his/her pace in the comfort of your house. 
@@ -41,7 +41,7 @@ affordable interactive online private tutoring.{{end}}
                                 four walls of a school building anymore in order to learn. Remoteschool.com.ng has
                                 got the answer.</p>
                             </div>
-                            <div class="d-sm-none">
+                            <div class="d-sm-none d-md-block">
                                 <h2>100% Remote online tutoring website</h2>
                                 <p>
                                     We bring this technology to your doorstep. Your child does not need the presence of a home  teacher to learn.<br/>
