Pricing an support page

--- a/cmd/web-app/templates/content/site-index.gohtml
+++ b/cmd/web-app/templates/content/site-index.gohtml
@@ -1,6 +1,7 @@
 {{define "title"}}Online interactive tutoring platform{{end}}
 {{define "description"}}Cloud-based learning platform that offers safe and
 affordable interactive online private tutoring.{{end}}
+{{define "homeActive"}}active{{end}}
 {{define "style"}}
 <style>
 .call-out {
