--- a/cmd/web-app/templates/content/site-support.gohtml
+++ b/cmd/web-app/templates/content/site-support.gohtml
@@ -1,5 +1,6 @@
 {{define "title"}}Support{{end}}
 {{define "description"}}Let us help with your business processes. Connect with us and let us know how we can help you.{{end}}
+{{define "supportActive"}}active{{end}}
 {{define "style"}}
 
 {{end}}
@@ -8,33 +9,6 @@
 
         <h1 class="h1 mt-5 mb-3 text-dark">Support</h1>
 
-        <div class="row">
-            <div class="col">
-
-                <p>We are excited to help our client’s transform their businesses processes with our Software-as-a-Service. We are as passionate as you to drive innovative change in various industries to raise the bar on what defines organizational excellence.</p>
-
-                <p>We are leaders in our space, providing best practices for digitizing businesses processes. Like you, we are building, learning, and iterating. If we can't answer your question in the Knowledge Base below, contact us 24/7 for support via email, phone or chat.</p>
-
-            </div>
-        </div>
-
-        <div class="row mt-5 mb-5">
-            <div class="col text-center">
-                <h2 class="h2 text-purple">Search our Knowledge Base</h2>
-
-                <form action="https://keeni.zendesk.com/hc/en-us/search" method="GET">
-                    <div class="input-group">
-                        <input type="text" class="form-control font-24" name="query" placeholder="What can we help with?">
-
-                        <div class="input-group-append">
-                            <input type="submit" value="Search" class="btn btn-primary font-24">
-                        </div>
-                    </div>
-                    <input type="hidden" name="utf8" value="✓">
-                </form>
-
-            </div>
-        </div>
 
         <div class="row mt-5 mb-5">
             <div class="col text-center">
@@ -46,12 +20,12 @@
 
             <div class="col-sm-6 text-center">
                 <h3 class="h2"><i class="far fa-envelope"></i>Email Us</h3>
-                <a href="mailto:support@ExampleDomain.com">support@ExampleDomain.com</a>
+                <a href="mailto:onlineremoteschool@gmail.com">onlineremoteschool@gmail.com</a>
             </div>
 
             <div class="col-sm-6 text-center">
                 <h3 class="h2"><i class="fas fa-phone"></i>Call Us</h3>
-                <a href="tel:1-907-100-2000">+1 (907) 100-2000</a>
+                <a href="tel:1-907-100-2000">+234 (701) 000-7062</a>
             </div>
 
         </div>
@@ -64,10 +38,10 @@
         <div class="row pt-5">
             <div class="col-sm-8">
                 <h3 class="h2 text-success">Interested in our Service?</h3>
-                <p>Simplify your business processes with our innovative solution. Signup for your free trial now!</p>
+                <p>Take advantage of advancement in technology and start learning at your pace from the comfort of your house!</p>
             </div>
             <div class="col-sm-4 text-right">
-                <a class="btn btn-info" href="/signup">Try it Now</a>
+                <a class="btn btn-info" href="/signup">Start Now</a>
             </div>
         </div>
     </div>
