--- a/cmd/web-app/templates/partials/site-topbar.tmpl
+++ b/cmd/web-app/templates/partials/site-topbar.tmpl
@@ -25,17 +25,17 @@
 
                 <ul class="navbar-nav ml-auto">
 
-                <li class="nav-item active">
+                <li class="nav-item {{block "homeActive" .}}{{end}}">
                     <a class="nav-link" href="/">Home
                     <span class="sr-only">(current)</span>
                     </a>
                 </li>
 
-                <li class="nav-item">
+                <li class="nav-item {{block "pricingActive" .}}{{end}}">
                     <a class="nav-link" href="/pricing">Pricing</a>
                 </li>
 
-                <li class="nav-item">
+                <li class="nav-item {{block "supportActive" .}}{{end}}">
                     <a class="nav-link" href="/support">Support</a>
                 </li>
 
