--- a/cmd/web-app/templates/content/site-index.gohtml
+++ b/cmd/web-app/templates/content/site-index.gohtml
@@ -56,13 +56,13 @@ affordable interactive online private tutoring.{{end}}
                                 <form method="post" action="signup">
                                     <div class="form-row">
                                         <div class="col-md-4 col-sm-12 mt-3">
-                                        <input type="text" class="form-control" placeholder="Name">
+                                        <input name="User.FirstName" type="text" class="form-control" placeholder="First Name">
                                         </div>
                                         <div class="col-md-4 col-sm-12 mt-3">
-                                        <input type="text" class="form-control" placeholder="Email">
+                                        <input name="User.Email" type="text" class="form-control" placeholder="Email">
                                         </div>
                                         <div class="col-md-4 col-sm-12 mt-3">
-                                        <input type="text" class="form-control" placeholder="Phone Number">
+                                        <input name="User.Phone" type="text" class="form-control" placeholder="Phone Number">
                                         </div>
                                     </div>
                                     <input type="submit" class="btb btn-danger btn-lg mt-3" value="Start Learning">
