Subscription model and subjects

--- a/cmd/web-app/templates/partials/app-sidebar.tmpl
+++ b/cmd/web-app/templates/partials/app-sidebar.tmpl
@@ -62,6 +62,11 @@
                     </div>
                 </div>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/admin/subjects">
+                    <i class="fas fa-fw fa-layer-group"></i>
+                    <span>Subjects</span></a>
+            </li>
             {{end}}
 
         {{ end }}
