--- a/cmd/web-app/templates/content/admin-subjects-view.gohtml
+++ b/cmd/web-app/templates/content/admin-subjects-view.gohtml
@@ -18,14 +18,14 @@
 
     <div class="card shadow mb-4">
         <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-            <h6 class="m-0 font-weight-bold text-dark">Subject Details</h6>
+            <h6 class="m-0 font-weight-bold text-dark">Subjects Details</h6>
             <div class="dropdown no-arrow show">
                 <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                     <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink" x-placement="bottom-end" style="position: absolute; transform: translate3d(-156px, 19px, 0px); top: 0px; left: 0px; will-change: transform;">
                     <div class="dropdown-header">Actions</div>
-                    <a class="dropdown-item" href="{{ .urlChecklistsUpdate }}">Update Details</a>
+                    <a class="dropdown-item" href="{{ .urlSubjectsUpdate }}">Update Details</a>
                     {{ if HasRole $._Ctx "admin" }}
                         <form method="post"><input type="hidden" name="action" value="archive" /><input type="submit" value="Archive Subject" class="dropdown-item"></form>
                     {{ end }}
