--- a/cmd/web-app/templates/partials/site-footer.tmpl
+++ b/cmd/web-app/templates/partials/site-footer.tmpl
@@ -7,7 +7,7 @@
           <h6>About</h6>
           <p class="text-justify">Remoteschool.com.ng
                is a cloud-based learning platform that offers safe and affordable 
-               interactive online and home (private tutoring)</p>
+               interactive online tutoring</p>
         </div>
 
         <div class="col-xs-6 col-md-3">
