--- a/cmd/web-app/templates/content/admin-subjects-update.gohtml
+++ b/cmd/web-app/templates/content/admin-subjects-update.gohtml
@@ -1,4 +1,5 @@
 {{define "title"}}Update Subject - {{ .subject.Name }}{{end}}
+{{define "subjectsActive"}}active{{end}}
 {{define "style"}}
 
 {{end}}
