--- a/cmd/web-app/templates/content/admin-periods-index.gohtml
+++ b/cmd/web-app/templates/content/admin-periods-index.gohtml
@@ -1,20 +1,20 @@
-{{define "title"}}Subjects{{end}}
-{{define "subjectsActive"}}active{{end}}
+{{define "title"}}Periods{{end}}
+{{define "periodsActive"}}active{{end}}
 {{define "content"}}
 
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/checklists">Subjects</a></li>
+            <li class="breadcrumb-item"><a href="{{ .urlPeriodsIndex }}">Periods</a></li>
             <li class="breadcrumb-item active" aria-current="page">Index</li>
         </ol>
     </nav>
 
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
 
-        <h1 class="h3 mb-0 text-gray-800">Subjects</h1>
+        <h1 class="h3 mb-0 text-gray-800">Periods</h1>
         {{ if HasRole $._Ctx "admin" }}
-            <a href="{{ .urlSubjectsCreate }}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
-                <i class="fas fa-folder-plus fa-sm text-white-50 mr-1"></i>Create Subject</a>
+            <a href="{{ .urlPeriodsCreate }}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+                <i class="fas fa-folder-plus fa-sm text-white-50 mr-1"></i>Create Period</a>
         {{ end }}
     </div>
 
