--- a/cmd/web-app/templates/content/users-invite.gohtml
+++ b/cmd/web-app/templates/content/users-invite.gohtml
@@ -1,4 +1,5 @@
 {{define "title"}}Invite Users{{end}}
+{{define "usersActive"}}active{{end}}
 {{define "content"}}
 
     <nav aria-label="breadcrumb">
