--- a/cmd/web-app/templates/partials/app-sidebar.tmpl
+++ b/cmd/web-app/templates/partials/app-sidebar.tmpl
@@ -39,6 +39,11 @@
                     </div> 
                 </div>
             </li>
+            <li class="nav-item {{block "classesActive" .}}{{end}}">
+                <a class="nav-link" href="/admin/classes">
+                    <i class="fas fa-fw fa-layer-group"></i>
+                    <span>Classes</span></a>
+            </li>
             <li class="nav-item {{block "subjectsActive" .}}{{end}}">
                 <a class="nav-link" href="/admin/subjects">
                     <i class="fas fa-fw fa-layer-group"></i>
