Changes made to the index,pricing and support pages

--- a/cmd/web-app/templates/content/site-index.gohtml
+++ b/cmd/web-app/templates/content/site-index.gohtml
@@ -34,7 +34,7 @@ affordable interactive online private tutoring.{{end}}
                     <div class="container">
                         <div class="carousel-caption text-center call-out mt-sm-5">
                             <div class="d-none d-md-block">
-                                <h1>Experience the Power of Technology in Education</h1>
+                                <h1>Enjor world class interactive class from the comfort of your home</h1>
                                 <p>Imagine the serenity, convenience and the satisfaction your child will derive
                                 from learning at his/her pace in the comfort of your house. 
                                 The world has
@@ -80,23 +80,20 @@ affordable interactive online private tutoring.{{end}}
     
             <div class="col-lg-4 text-center">
                 <img class="" src="{{ SiteAssetUrl "/images/Icon_The_Best_Tutors.png" }}" alt="Image of teachers" width="140" height="140">
-                <h2 class="text-center">The Best Tutors</h2>
+                <h2 class="text-center">Meet our Experienced teachers</h2>
                 <p class="text-center">
-                Our teacher goes through a very regorious approval process. We hand pick industry experts with not less
-                than 5 year teaching experience that are good in technology.
+                We engage our teachers in a very screening processes. we selectively recruite experienced qualified and ICT inclined with not less than 5 years of teaching experience.
                 </p>
             </div>
             <div class="col-lg-4 text-center">
                 <img class="text-center" src="{{ SiteAssetUrl "/images/Icon_Personalized.png" }}" alt="Personalized experience" width="140" height="140">
                 <h2 class="text-center">Personalized</h2>
-                <p class="text-center">Every session gives one-to-one and personalized experience to the learner. There is no overcrawding of classes. 
-                We maintain a maximum of five(5) students</p>
+                <p class="text-center">Every session give learner opportunity to learn and collaborate with other learner across the globe. There is no overcrowding of classes we maintain a maximum of five(5) students</p>
             </div>
             <div class="col-lg-4 text-center">
                 <img class="text-center" src="{{ SiteAssetUrl "/images/Icon_Variety_of_Subjects.png" }}" alt="Variety of subjects" width="140" height="140">
                 <h2 class="text-center">Variety of Subjects</h2>
-                <p class="text-center">We cover subjects for Primary, Junior and Senior Secondary school.
-                 From Maths and Further Maths to English, Chemistry and Physics. Test prep and AP. too</p>
+                <p class="text-center">Our teaching/learning school cover nusery/primary, secondary and othes with focus on basic certifcate examination(Common entrance, WAEC, etc)</p>
             </div>
         </div>
 
@@ -108,25 +105,25 @@ affordable interactive online private tutoring.{{end}}
 					<div class="col-sm-4">
 						<ul>
 							<li class="category-link"><a href="/signup/math"><b>Math</b></a></li>
-							<li><a href="/signup/algebra">Algebra Tutors</a></li>
-							<li><a href="/signup/calculus">Calculus Tutors</a></li>
-							<li><a href="/signup/trigonometry">Trigonometry Tutors</a></li>
+							<li><a href="/signup/signup">Algebra Tutors</a></li>
+							<li><a href="/signup/signup">Calculus Tutors</a></li>
+							<li><a href="/signup/signup">Trigonometry Tutors</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-4">
 						<ul>
 							<li class="category-link"><a href="/signup/science"><b>Science</b></a></li>
-							<li><a href="/signup/chemistry">Chemistry Tutors</a></li>
-							<li><a href="/signup/physics">Physics Tutors</a></li>
-							<li><a href="/signup/biology">Biology</a></li>
+							<li><a href="/signup/signup">Chemistry Tutors</a></li>
+							<li><a href="/signup/signup">Physics Tutors</a></li>
+							<li><a href="/signup/signup">Biology</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-4">
 						<ul>
 							<li class="category-link"><a href="/subjects/english"><b>English</b></a></li>
-							<li><a href="/signup/essay-writing">Essay Writing Tutors</a></li>
-							<li><a href="/signup/literature">Literature Tutors</a></li>
-							<li><a href="/signup/proofreading">Proofreading Tutors</a></li>
+							<li><a href="/signup/signup">Essay Writing Tutors</a></li>
+							<li><a href="/signup/signup">Literature Tutors</a></li>
+							<li><a href="/signup/signup">Proofreading Tutors</a></li>
 						</ul>
 					</div>
 				</div>
