--- a/cmd/web-app/templates/content/site-pricing.gohtml
+++ b/cmd/web-app/templates/content/site-pricing.gohtml
@@ -10,7 +10,7 @@
         <h1 class="h1 mt-5 mb-3 text-dark text-center">Pricing</h1>
 
         <p class="lead mb-5 text-center">
-            We have got a got a very affordation price for online tutoring.
+            We have got a very affordation price for online learning.
          </p>
 
         <!-- Start the Pricing Cards -->
@@ -39,10 +39,10 @@
         <div class="row pt-5">
             <div class="col-sm-8">
                 <h3 class="h2 text-success">Interested in our Service?</h3>
-                <p>Launch into the feature of learning. Start learning any of our subjects from the comfort of your home!</p>
+                <p>Start learning any of our subjects from the comfort of your home!</p>
             </div>
             <div class="col-sm-4 text-right">
-                <a class="btn btn-info" href="/signup">Try it Now</a>
+                <a class="btn btn-info" href="/signup">Register today</a>
             </div>
         </div>
     </div>
