--- a/cmd/web-app/templates/partials/site-footer.tmpl
+++ b/cmd/web-app/templates/partials/site-footer.tmpl
@@ -13,9 +13,11 @@
         <div class="col-xs-6 col-md-3">
           <h6>Top Subject</h6>
           <ul class="footer-links">
-            <li><a href="/signup/maths">Maths</a></li>
-            <li><a href="/signup/english">English</a></li>
-            <li><a href="/signup/biology">Biology</a></li>
+            <li><a href="/signup/signup">Maths</a></li>
+            <li><a href="/signup/signup">English</a></li>
+            <li><a href="/signup/signup">Biology</a></li>
+            <li><a href="/signup/signup">Private class</a></li>
+
           </ul>
         </div>
 
