--- a/cmd/web-app/templates/content/site-index.gohtml
+++ b/cmd/web-app/templates/content/site-index.gohtml
@@ -34,7 +34,7 @@ affordable interactive online private tutoring.{{end}}
                     <div class="container">
                         <div class="carousel-caption text-center call-out mt-sm-5">
                             <div class="d-none d-md-block">
-                                <h1>Enjor world class interactive class from the comfort of your home</h1>
+                                <h1>Enjoy world class interactive class from the comfort of your home</h1>
                                 <p>Imagine the serenity, convenience and the satisfaction your child will derive
                                 from learning at his/her pace in the comfort of your house. 
                                 The world has
@@ -43,9 +43,9 @@ affordable interactive online private tutoring.{{end}}
                                 got the answer.</p>
                             </div>
                             <div class="d-none d-md-block">
-                                <h2>100% Remote online tutoring website</h2>
+                                <h2>100% Teaching and Learnig website</h2>
                                 <p>
-                                    We bring this technology to your doorstep. Your child does not need the presence of a home  teacher to learn.<br/>
+                                    We bring this technology to your doorstep. Your child does not need the presence of a home teacher to learn.<br/>
                                     Out platform provides a 100% remote learning environment that gives the same 
                                     interactive experience available in a physical class.
                                 </p>
@@ -80,20 +80,21 @@ affordable interactive online private tutoring.{{end}}
     
             <div class="col-lg-4 text-center">
                 <img class="" src="{{ SiteAssetUrl "/images/Icon_The_Best_Tutors.png" }}" alt="Image of teachers" width="140" height="140">
-                <h2 class="text-center">Meet our Experienced teachers</h2>
+                <h2 class="text-center">Our teachers</h2>
                 <p class="text-center">
-                We engage our teachers in a very screening processes. we selectively recruite experienced qualified and ICT inclined with not less than 5 years of teaching experience.
-                </p>
+                Our teachers goes through a highly effective screening process.
+                We selectively recruit experienced, qualified and ICT inclined teachers with not less
+                5years of teaching experience.</p>
             </div>
             <div class="col-lg-4 text-center">
                 <img class="text-center" src="{{ SiteAssetUrl "/images/Icon_Personalized.png" }}" alt="Personalized experience" width="140" height="140">
                 <h2 class="text-center">Personalized</h2>
-                <p class="text-center">Every session give learner opportunity to learn and collaborate with other learner across the globe. There is no overcrowding of classes we maintain a maximum of five(5) students</p>
+                <p class="text-center">Every session give learner opportunity to learn and collaborate with other learners across the globe. There is no overcrowding of classes we maintain a maximum of five(5) students per class.</p>
             </div>
             <div class="col-lg-4 text-center">
                 <img class="text-center" src="{{ SiteAssetUrl "/images/Icon_Variety_of_Subjects.png" }}" alt="Variety of subjects" width="140" height="140">
                 <h2 class="text-center">Variety of Subjects</h2>
-                <p class="text-center">Our teaching/learning school cover nusery/primary, secondary and othes with focus on basic certifcate examination(Common entrance, WAEC, etc)</p>
+                <p class="text-center">Our teaching/learning school cover nusery, primary, secondary and others with focus on basic certifcate examination such common entrance, WAEC, NECO, NABTEB etc)</p>
             </div>
         </div>
 
@@ -104,26 +105,29 @@ affordable interactive online private tutoring.{{end}}
 				<div class="row gotyou-covered">
 					<div class="col-sm-4">
 						<ul>
-							<li class="category-link"><a href="/signup/math"><b>Math</b></a></li>
-							<li><a href="/signup/signup">Algebra Tutors</a></li>
-							<li><a href="/signup/signup">Calculus Tutors</a></li>
-							<li><a href="/signup/signup">Trigonometry Tutors</a></li>
+							<li class="category-link"><a href="/signup"><b>Upper Primary</b></a></li>
+							<li><a href="/signup">Mathematics</a></li>
+							<li><a href="/signup">Verbal/ Quantitive reasoning</a></li>
+							<li><a href="/signup">English language</a></li>
+                            <li><a href="/signup">more...</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-4">
 						<ul>
-							<li class="category-link"><a href="/signup/science"><b>Science</b></a></li>
-							<li><a href="/signup/signup">Chemistry Tutors</a></li>
-							<li><a href="/signup/signup">Physics Tutors</a></li>
-							<li><a href="/signup/signup">Biology</a></li>
+							<li class="category-link"><a href="/signup"><b>Junior secondary</b></a></li>
+							<li><a href="/signup">Mathematics</a></li>
+							<li><a href="/signup">Basic science</a></li>
+							<li><a href="/signup">Basic Technology</a></li>
+                            <li><a href="/signup">more...</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-4">
 						<ul>
-							<li class="category-link"><a href="/subjects/english"><b>English</b></a></li>
-							<li><a href="/signup/signup">Essay Writing Tutors</a></li>
-							<li><a href="/signup/signup">Literature Tutors</a></li>
-							<li><a href="/signup/signup">Proofreading Tutors</a></li>
+							<li class="category-link"><a href="/subjects"><b>Senior secondary</b></a></li>
+							<li><a href="/signup">Mathematics</a></li>
+							<li><a href="/signup">Physics</a></li>
+							<li><a href="/signup">Biology</a></li>
+                            <li><a href="/signup">More...</a></li>
 						</ul>
 					</div>
 				</div>
