--- a/cmd/web-app/templates/content/site-pricing.gohtml
+++ b/cmd/web-app/templates/content/site-pricing.gohtml
@@ -10,7 +10,7 @@
         <h1 class="h1 mt-5 mb-3 text-dark text-center">Pricing</h1>
 
         <p class="lead mb-5 text-center">
-            We have got a very affordation price for online learning.
+            Our price is very affordable for online learning.
          </p>
 
         <!-- Start the Pricing Cards -->
