--- a/cmd/web-app/templates/partials/site-footer.tmpl
+++ b/cmd/web-app/templates/partials/site-footer.tmpl
@@ -13,10 +13,10 @@
         <div class="col-xs-6 col-md-3">
           <h6>Top Subject</h6>
           <ul class="footer-links">
-            <li><a href="/signup/signup">Maths</a></li>
-            <li><a href="/signup/signup">English</a></li>
-            <li><a href="/signup/signup">Biology</a></li>
-            <li><a href="/signup/signup">Private class</a></li>
+            <li><a href="/signup">Maths</a></li>
+            <li><a href="/signup">English</a></li>
+            <li><a href="/signup">Biology</a></li>
+            <li><a href="/signup">Private classes</a></li>
 
           </ul>
         </div>
@@ -27,6 +27,7 @@
             <li><a class="p-2 text-white" href="/">Home</a></li>
             <li><a class="p-2 text-white" href="/pricing">Pricing</a></li>
             <li><a class="p-2 text-white" href="/support">Support</a></li>
+            <li><a class="p-2 text-white" href="https://forms.gle/xgnAREA3fByZYKuc6" target="_blank">Career</a></li>
           </ul>
         </div>
       </div>
