--- a/cmd/web-app/templates/content/site-index.gohtml
+++ b/cmd/web-app/templates/content/site-index.gohtml
@@ -31,7 +31,7 @@ affordable interactive online private tutoring.{{end}}
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="first-slide" src="https://dzuyel7n94hma.cloudfront.net/accelerator/img/saas-starter-kit-banner-01.png" style="width:100%;min-height: 500px" alt="First slide">
-                    <div class="container">
+                    <div class="container mt-md-3">
                         <div class="carousel-caption text-center call-out mt-sm-5">
                             <div class="d-none d-md-block">
                                 <h1>Experience the Power of Technology in Education</h1>
