--- a/cmd/web-app/templates/partials/app-topbar.tmpl
+++ b/cmd/web-app/templates/partials/app-topbar.tmpl
@@ -222,6 +222,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/signup">Create Account</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/signup">Apply as Teacher</a>
+            </li>
 
             <div class="topbar-divider d-none d-sm-block"></div>
 
